# aoc2016

./: README.md  aoc2016.cabal
app/: Main.hs
src/: Day1.hs  Day10.hs  Day12.hs  Day13.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
test/: Day10Spec.hs  Day12Spec.hs  Day13Spec.hs  Day1Spec.hs  Day2Spec.hs  Day3Spec.hs  Day4Spec.hs  Day5Spec.hs  Day6Spec.hs  Day7Spec.hs  Day8Spec.hs  Day9Spec.hs
