name:                aoc2016
version:             0.1.0.0
synopsis:            Haskell solutions to aoc 2016 challenge
description:         Please see README.md
homepage:            https://github.com/reidwilbur/aoc2016#readme
license:             BSD3
license-file:        LICENSE
author:              Reid Wilbur
maintainer:          reid.wilbur@gmail.com
copyright:           2016 Reid Wilbur
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

--Executable             Day13
--  build-depends:       base >= 4.7 && < 5
--                     , aoc2016
--  main-is:             Main.hs
--  hs-source-dirs:      app
--  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Day1, Day2, Day3, Day4
                     , Day5, Day6, Day7, Day8
                     , Day9, Day10, Day12, Day13
  build-depends:       base >= 4.7 && < 5
                     , split
                     , containers
                     , regex-posix
                     , cryptohash
                     , bytestring
                     , vector
  ghc-options:         -O2 -optc-O3
  default-language:    Haskell2010

test-suite Day1Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day1Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day2Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day2Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day3Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day3Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day4Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day4Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day5Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day5Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , bytestring
                     , hspec >= 2.2
  ghc-options:         -threaded -O2 -optc-O3
  default-language:    Haskell2010

test-suite Day6Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day6Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , bytestring
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day7Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day7Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , bytestring
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day8Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day8Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , bytestring
                     , hspec >= 2.2
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day9Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day9Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , bytestring
                     , hspec >= 2.2
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day10Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day10Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day12Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day12Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , hspec >= 2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite Day13Test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Day13Spec.hs
  build-depends:       base
                     , aoc2016
                     , containers
                     , hspec >= 2.2
  ghc-options:         -threaded -O2 -optc-O3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reidwilbur/aoc2016
